--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,9 @@
   font-size: 16px;
   font-family: 'Zen Antique Soft', serif;
 }
+.taskContainer input:disabled{
+  cursor: not-allowed;
+}
 .icon {
   width: 35px;
   height: 37px;
